# optimization

./: .coveragerc  .gitignore  README.md  pyproject.toml  python_libraries.md  set_python_version.py
.github/workflows/: optimization.yml
Refs/: .Mathematical Programming in Python with DOcplex _ by Hilal YILMAZ _ Jun, 2022 _ Medium _ Medium.pdf.icloud
equations/: Untitled.ipynb  equations.py
jupter-notebooks/: =1.0  optimal_power_flow.ipynb  pandapower.ipynb  pandapw1.ipynb  phones.ipynb  power_loss.ipynb  school_bus.ipynb
jupter-notebooks/pp_tutorials/: T1.ipynb  T4.ipynb
optimization/: config.py
optimization/core/: bus_allocation.py  buses.py  power_cable.py  renewables.py  wrappers.py
optimization/equations/: Untitled1.ipynb  stack_overflow.ipynb
optimization/jupter-notebooks/: Untitled.ipynb  bus_allocation.ipynb  optimal_power_flow.ipynb  phones.ipynb  power_cable_loss.ipynb  power_loss.ipynb  renewable_energy_flow-Copy1.ipynb  renewable_energy_flow.ipynb  school_bus.ipynb  solar_cost.ipynb  tf_pf.ipynb
optimization/jupter-notebooks/pp_tutorials/: T2.ipynb  T5-short_circuits.ipynb
optimization/tests/: test_buses.py  test_renewables.py
