[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "optimization"
version = "0.1.0"
description = ""
authors = [ "Marco Di Gennaro <m.di.gennaro@outlook.com>",]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.1.6"
numpy = "^1.26.4"
scipy = "^1.13.0"
pandas = "^2.2.2"
jupyterlab-execute-time = "^3.1.2"
docplex = "^2.27.239"
cplex = "^22.1.1"
#pandapower = "^2.14.6"
#numba = "^0.59.1"
matplotlib = "^3.8.4"
plotly = "^5.20.0"
seaborn = "^0.13.2"
#colorcet = "^3.1.0"
toml = "^0.10.2"
PuLP = "^2.8.0"
#cvxopt = "^1.3.2"
#cvxpy = "^1.4.3"
memory-profiler = "^0.61.0"
jupyter-contrib-nbextensions = "^0.7.0"
pytest = "^8.1.1"
#notebook = "^7.1.3"
ipython = "^8.23.0"
tensorflow = "^2.16.1"
pydantic = "^2.7.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

